[package]
name = "roli_proxy"
description = "e.roli.ga reverse proxy reimplementation"
license-file = "../LICENSE"
version = "0.1.0"
edition = "2021"
# todo
# repository = "https://github.com/fluffiac/roli_proxy"
# readme = "../README.md"
# keywords = ["hack"]
# categories = ["hack"]

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["rustls", "tls-rustls"] }
futures = "0.3.30"
image = "0.25.1"
itertools = "0.12.1"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive", "rc"] }
serde_json = "1.0.115"
systemd-journal-logger = "2.1.1"
tokio = { version = "1.37.0", features = ["full"] }
